02-multi-account-governance-platform/policy-as-code/kyverno/02-disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privileged-containers-not-allowed
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Privileged containers are not allowed in governed namespaces."
        pattern:
          spec:
            =(containers):
              - =(securityContext):
                  =(privileged): "false"
